--- a/css/global.css
+++ b/css/global.css
@@ -2,6 +2,8 @@ html,
 body,
 #__next,
 .app {
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   overflow: hidden;
   margin: 0;
   height: 100%;
