--- a/css/sidebar.module.css
+++ b/css/sidebar.module.css
@@ -5,4 +5,17 @@
   width: 280px;
   background-color: #1a1e24;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.158);
+  display: flex;
+  flex-direction: column;
+}
+
+.locations {
+  margin-top: 15px;
+}
+.locationLink {
+  color: #fff;
+  font-size: 20px;
+  margin: 0;
+  cursor: pointer;
+  text-decoration: none;
 }
