--- a/css/page.module.css
+++ b/css/page.module.css
@@ -2,17 +2,44 @@
   margin: 4px 0 15px 20px;
   font-size: 23px;
   font-weight: 400;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.locationsContainer {
-  overflow-y: scroll;
+.locPage {
+  height: 100vh;
+  overflow-y: scroll !important;
 }
 
-.locationsContainer::-webkit-scrollbar {
+.locPage::-webkit-scrollbar {
   background-color: transparent;
   width: 5px;
 }
-.locationsContainer::-webkit-scrollbar-thumb {
+.locPage::-webkit-scrollbar-thumb {
   background-color: #0066af71;
   border-radius: 3px;
+}
+
+.pageHeader button {
+  color: rgb(214, 214, 214);
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.534);
+  border: 0;
+  font-size: 18px;
+  outline: 0;
+  padding: 4px 10px;
+  cursor: pointer;
+  margin-right: 10px;
+  transition: 0.14s ease;
+  background-color: transparent;
+}
+
+.pageHeader button:hover {
+  background-color: #171b20;
+  color: #fff;
+}
+
+.pageHeader p {
+  margin: 0;
+  width: fit-content;
 }
