--- a/css/table.module.css
+++ b/css/table.module.css
@@ -67,6 +67,10 @@
 .name {
   text-align: left;
   flex: 1;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  max-width: 100%;
 }
 
 .newInput {
