--- a/css/sidebar.module.css
+++ b/css/sidebar.module.css
@@ -1,17 +1,19 @@
 .sideBar {
   z-index: 2;
-  height: 100%;
+  height: 100vh;
   width: 300px;
   background-color: #171b20;
   padding-top: 20px;
   /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.158); */
   display: flex;
+  /* overflow: scroll !important; */
   flex-direction: column;
 }
 
 .locationsWrapper {
   overflow: hidden;
   height: fit-content;
+  flex: 1;
 }
 
 /* .locationsWrapper:hover .locations { */
@@ -35,6 +37,10 @@
 
 .locationLink,
 .activeLocationLink {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 300px;
   background-color: #171b20;
   color: rgb(202, 202, 202);
   font-size: 18px;
@@ -89,14 +95,24 @@
 }
 
 .locs {
-  overflow: hidden;
+  overflow: scroll !important;
+  height: 100%;
 }
 
-.locationBtn {
+.locs::-webkit-scrollbar {
+  display: none;
+}
+
+.locationBtn,
+.locationsActive {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding-right: 10px;
+}
+
+.locationsActive {
+  border-bottom: 1px solid #1f242b;
 }
 
 .activeArrow,
