--- a/css/page.module.css
+++ b/css/page.module.css
@@ -62,8 +62,24 @@
   background-color: #171b20;
   height: 80vh;
   width: 100%;
+  position: relative;
   display: flex;
   max-width: 1460px;
+}
+
+.loadingOverlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 200;
+  display: grid;
+  place-items: center;
+  background-color: #1f242b94;
+}
+
+.loadingOverlay h3 {
+  color: #fff;
+  font-size: 26px;
 }
 
 .statusLeft {
@@ -81,6 +97,7 @@
   width: 100%;
   display: grid;
   place-items: center;
+  margin-bottom: 40px;
 }
 
 .statusSize {
@@ -94,4 +111,122 @@
   place-items: center;
   color: rgb(240, 240, 240);
   font-size: 20px;
+}
+
+.statusDataItems {
+  justify-content: center;
+  display: flex;
+  align-items: center;
+  margin: 0;
+  margin-top: 10px;
+  font-weight: bolder;
+  font-size: 18px;
+  color: #0066af;
+}
+
+.statusDataItems p {
+  font-weight: normal;
+  margin: 0;
+  color: rgb(233, 233, 233);
+  margin-left: 10px;
+}
+
+.statusRight {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+
+.statusServerHeader {
+  margin: 0;
+  font-weight: bold;
+  font-size: 18px;
+  color: rgb(212, 212, 212);
+  height: 8%;
+}
+
+.statusServer {
+  height: 42%;
+  display: flex;
+}
+
+.statusServerLeft {
+  width: 33%;
+  height: 100%;
+  display: grid;
+  place-items: center;
+}
+
+.statusServerLeftWrapperActive,
+.statusServerLeftWrapperInActive {
+  width: 85px;
+  height: 85px;
+  border-radius: 50%;
+  border: 5px solid #0066af;
+  display: grid;
+  cursor: pointer;
+  font-size: 18px;
+  place-items: center;
+  transition: background-color 0.15s ease;
+}
+.statusServerLeftWrapperActive:hover,
+.statusServerLeftWrapperInActive:hover {
+  background-color: #1f242b;
+}
+
+.statusServerLeftWrapperInActive {
+  border: 5px solid rgb(255, 47, 47);
+}
+
+.requestsLink {
+  cursor: pointer;
+  transition: 0.1s ease;
+}
+.requestsLink:hover {
+  color: #0066af;
+}
+
+.statusServerRight {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.statusServerRightItem,
+.statusRightUrl {
+  color: #0066af;
+  font-weight: bolder;
+  padding: 10px;
+  display: flex;
+  font-size: 18px;
+  align-items: center;
+}
+
+.statusRightUrl {
+  color: rgb(212, 212, 212);
+  font-weight: 500;
+  margin-left: 20px;
+  font-size: 16px;
+}
+
+.statusRightUrl p {
+  margin: 0;
+  color: #0066af;
+}
+
+.statusServerRightItem p {
+  margin: 0;
+  font-weight: normal;
+  color: rgb(212, 212, 212);
+  font-weight: 500;
+  margin-left: 10px;
+}
+
+.statusServerRightItem p span {
+  color: rgb(212, 212, 212);
+  font-weight: normal;
+  font-size: 15px;
+  margin-left: 4px;
 }
