--- a/css/page.module.css
+++ b/css/page.module.css
@@ -230,3 +230,56 @@
   font-size: 15px;
   margin-left: 4px;
 }
+
+.chartGrid {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.chartTop {
+  background: #171b20;
+  margin: 10px;
+  padding: 20px;
+  width: 45vw;
+}
+
+.chart {
+  background: #171b20;
+  margin: 10px;
+  padding: 20px;
+  width: 30vw;
+}
+
+.header {
+  padding: 10px;
+  width: 100%;
+  display: flex;
+
+  justify-content: space-between;
+  height: 5vh;
+}
+
+.header p {
+  height: fit-content;
+  margin: 0 0 0 10px;
+  font-size: 20px;
+}
+
+.header button {
+  margin-right: 10px;
+  outline: none;
+  color: rgb(226, 226, 226);
+  cursor: pointer;
+  font-size: 17px;
+  padding: 4px 7px;
+  border: 0;
+  transition: 0.15s ease;
+  background-color: #171b20;
+  height: fit-content;
+}
+
+.header button:hover {
+  color: #0066af;
+}
