--- a/css/page.module.css
+++ b/css/page.module.css
@@ -159,7 +159,8 @@
 }
 
 .statusServerLeftWrapperActive,
-.statusServerLeftWrapperInActive {
+.statusServerLeftWrapperInActive,
+.statusServerLeftWrapperLoading {
   width: 85px;
   height: 85px;
   border-radius: 50%;
@@ -177,6 +178,11 @@
 
 .statusServerLeftWrapperInActive {
   border: 5px solid rgb(255, 47, 47);
+}
+
+.statusServerLeftWrapperLoading {
+  border: 5px solid #121416;
+  pointer-events: none;
 }
 
 .requestsLink {
