--- a/css/col.module.css
+++ b/css/col.module.css
@@ -3,6 +3,9 @@
   background-color: #171b20;
   margin: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.151);
+  display: flex;
+
+  flex-direction: column;
 }
 
 .colPage {
@@ -155,4 +158,61 @@
 
 .insertEditorBottom button:hover {
   color: #fff;
+}
+
+.JSONTreeBtn,
+.activeJSONTreeBtn {
+  height: 20px !important;
+  width: 20px !important;
+  cursor: pointer;
+  margin: 0 4px;
+  color: rgb(212, 212, 212);
+  transition: 0.14s ease !important;
+}
+.JSONTreeBtn:hover {
+  color: #0066af;
+}
+
+.activeJSONTreeBtn {
+  color: #0066af;
+}
+
+.JSONBottom {
+  display: flex;
+  justify-content: flex-end;
+  opacity: 0;
+  align-items: center;
+}
+
+.jsonTree:hover .JSONBottom {
+  opacity: 1;
+}
+
+.updateBtnWrapper {
+  color: rgb(212, 212, 212);
+  padding: 3px 7px;
+  cursor: pointer;
+  margin-left: 25px;
+  flex: 1;
+  display: flex;
+  justify-content: flex-end;
+  font-size: 18px;
+  opacity: 0;
+}
+
+.jsonTree:hover .updateBtnWrapper {
+  opacity: 1;
+}
+
+.updateBtnWrapper p {
+  transition: 0.13s ease !important;
+  margin: 0;
+  margin-bottom: 3px;
+  padding: 2px 8px;
+  background-color: #1f242b;
+  width: fit-content;
+}
+
+.updateBtnWrapper p:hover {
+  color: #0066af;
 }
